Bug 14188 - Chrome PC/iPad Safari: Drop-down text changes its vertical alignment

--- a/skins/retail/css/main.css
+++ b/skins/retail/css/main.css
@@ -68,6 +68,7 @@ select {
     width: 100%;
     height: 100%;
     padding: 0 25px 0 10px;
+    float: left;
 }
 @-moz-document url-prefix() {
     /* due to firefox does not hide select element arrows need change padding */
@@ -90,9 +91,8 @@ select {
     height: 100%;
     position: relative;
     z-index: 2;
-    left: 100%;
-    top: -100%;
     margin-left: -22px;
+    float: left;
     background-color: inherit;
     background-repeat: no-repeat;
     background-position: 5px 50%;
