--- a/skins/weborder/css/main.css
+++ b/skins/weborder/css/main.css
@@ -71,6 +71,7 @@ select {
     width: 100%;
     height: 100%;
     padding: 0 25px 0 10px;
+    float: left;
 }
 @-moz-document url-prefix() {
     /* due to firefox does not hide select element arrows need change padding */
@@ -93,8 +94,7 @@ select {
     height: 100%;
     position: relative;
     z-index: 2;
-    left: 100%;
-    top: -100%;
+    float: left;
     margin-left: -22px;
     background-color: inherit;
     background-repeat: no-repeat;
